[package]
name = "hoyo-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Hoyo-lab API wrapper"
keywords = ["genshin", "api", "async"]

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
chrono = "0.4.39"
chrono-tz = "0.10.0"
maybe-async = "0.2"
md5 = "0.7.0"
openssl = "0.10.68"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"], default-features = false}
reqwest_cookie_store = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
zeroize = "1.8.1"
tokio = { version = "1.8.4", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
dotenv = "0.15"
tokio-test = "0.4"

[features]
default = ["native-tls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
blocking = ["maybe-async/is_sync", "reqwest/blocking"]

